# btoon-core

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  RELEASE_NOTES.md  nlohmann_json.patch  test.json  test_data.json  test_schema.json
.github/workflows/: interop-tests.yml  release-binaries.yml  release.yml
bindings/javascript/: btoon.d.ts  btoon.js  package.json
bindings/python/: btoon.py  btoon_enhanced.py  btoon_python.hpp  module.cpp  setup.py
cmake/: nlohmann_json.cmake  toolchain-linux-arm64.cmake  toolchain-linux.cmake  toolchain-macos.cmake  toolchain-windows.cmake
docs/: API.md  ARCHITECTURE.md  BTOON-SPEC-v0.1.md  CHANGELOG.md  IMPLEMENTATION-GUIDE.md  QUICK-REFERENCE.md  btoon-spec.md  btoon.1  columnar-compression-spec.md  performance.md  roadmap.md  tutorial.md
examples/: basic.cpp  javascript_example.js  python_example.py  tabular.cpp
fuzz/: README.md  fuzz_decoder.cpp
include/btoon/: btoon.h  capi.h  compression.h  decoder.h  encoder.h  memory_pool.h  schema.h  security.h  stream_decoder.h  stream_encoder.h  utils.h  validator.h  zero_copy.h
scripts/: build-release.ps1  build-release.sh  ci_build.py  install.sh
src/: btoon.cpp  capi.cpp  compression.cpp  decoder.cpp  encoder.cpp  memory_pool.cpp  rle_codec.cpp  schema.cpp  security.cpp  stream_encoder.cpp  validator.cpp  zero_copy.cpp
tests/: benchmark.cpp  fuzz_decoder.cpp  test_btoon.cpp  test_capi.cpp  test_compression_levels.cpp  test_decoder.cpp  test_decoder_tabular.cpp  test_encoder.cpp  test_encoder_tabular.cpp  test_performance.cpp  test_schema.cpp  test_schema_inference.cpp  test_schema_versioning.cpp  test_security.cpp  test_streaming.cpp  test_validator.cpp
tests/interop/: generate-test-data.cpp  run-benchmarks.sh  validate-test-data.cpp
tests/test_vectors/: test_vectors.json
tools/: btoon-convert.cpp  btoon-schema.cpp  btooncli.cpp
